resources/css/app.css
@tailwind base;
@tailwind components;
@tailwind utilities;
/* resources/css/app.css */
@font-face {
    font-family: 'Begum';
    src: url('/fonts/Begum-Medium.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'DearestJohn';
    src: url('/fonts/DearestJohnW01-Regular.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

.font-begum {
    font-family: 'Begum', sans-serif;
}

.font-dearest {
    font-family: 'DearestJohn', serif;
}

.color-body{
    background-color: #000712;
}
.hero-image {
    filter: blur(5px); /* Desenfoque inicial */
    transition: filter 0.5s ease, transform 0.5s ease;
    border-radius: 1rem; /* Borde redondeado */
}
.hero-content {
    transition: opacity 0.5s ease;
}
.hero:hover .hero-image {
    filter: blur(0); /* Quitar desenfoque al pasar el cursor */
}
.hero:hover .hero-content {
    opacity: 0; /* Ocultar texto al pasar el cursor */
}
/* Estilo para el navbar */
.navbar {
    background-color: transparent; /* Hace el fondo transparente */
    position: absolute; /* Asegura que se superponga sobre el contenido */
    width: 100%; /* Se extiende a todo el ancho */
    z-index: 10; /* Se asegura de estar sobre otros elementos */
}

/* Opcional: Estilo para los enlaces del navbar */
.navbar a {
    color: white; /* Cambia el color del texto */
    text-decoration: none;
    padding: 10px;
}

.navbar a:hover {
    color: #f0f0f0; /* Color más claro al pasar el mouse */
}

